--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -38,26 +38,12 @@ jobs:
         id: download
         with:
           name: release-apk
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Release
+        uses: xresloader/upload-to-github-release@v1.3.12
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: ${{ env.RELEASE_BODY }}
+          file: "./app-release.apk"
           overwrite: true
           draft: false
           update_latest_release: true
-      - run: echo "version_tag=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
-      - name: upload Release Apk
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./app-release.apk
-          asset_name: biketogether-${{ env.version_tag }}.apk
-          asset_content_type: application/vnd.android.package-archive
